# unitkit

./: CMakeLists.txt  GNUmakefile  NOTICE  README  UnitKit.xcodeproj  uninstall
Sample Projects/Currency Converter/: Converter.h  main.m
Sample Projects/Currency Converter After/: Controller.h  Controller.m  Converter.m  ConverterTest.h  ConverterTest.m  ConverterTests-Info.plist
Sample Projects/Currency Converter After/Currency Converter.pbproj/: project.pbxproj
Sample Projects/Currency Converter After/English.lproj/MainMenu.nib/: classes.nib
Sample Projects/Currency Converter/Currency Converter.pbproj/: project.pbxproj
Sample Projects/Currency Converter/English.lproj/: InfoPlist.strings
Sample Projects/Currency Converter/English.lproj/MainMenu.nib/: info.nib  objects.nib
Source/: UKTestBundleOne.bundle  UnitKit
Source/Application Support/Developer/Shared/Xcode/File Templates/UnitKit/UnitKit TestClass.pbfiletemplate/: TemplateInfo.plist  class.h  class.m
Source/FrameworkSource/: GNUmakefile  UKRunner.h  UKRunner.m  UKTask.h  UKTest.h  UKTestHandler.h  UKTestHandler.m  UnitKit.h  UnitKitParentIncludes.h  _UnitKitParentIncludes.h
Source/FrameworkSource/English.lproj/: InfoPlist.strings  UKTestHandler.strings
Source/SharedLibrarySource/: uk_handler.c  uk_handler.h  uk_handler_objc.c  uk_handler_objc.m  uk_handler_plain_c.c
Source/TestSource/TestBundle/: TestOne.h  TestOne.m  TestThree.h  TestTwo.h
Source/TestSource/TestFramework/: TestClass.h  TestClass.m
Source/TestSource/UnitKitTests/: UKRunnerTests.h  UKRunnerTests.m  UKTaskTests.h  UKTestFileNames.h  UKTestFramework.h  UKTestFramework.m  UKTestLineNumbers.h  UKTestMacros.h  UKTestMacros.m  UKTestMessages.h  UKTestMessages.m
Source/ToolSource/: main.m  ukrun.1
Source/UnitKit.framework/Versions/A/Headers/: UKRunner.h  UKTest.h  UKTestHandler.h  UnitKit.h  UnitKitParentIncludes.h
Source/UnitKit.xcodeproj/: project.pbxproj
Source/Xcode Integration/File Templates/UnitKit/UnitKit TestClass.pbfiletemplate/: class.h  class.m
Source/Xcode Integration/Target Templates/UnitKit/: UnitKit Bundle.trgttmpl  UnitKitDebug Bundle.trgttmpl
